Fix positioning & alignment for Gold Sponsors & social icons

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -134,13 +134,14 @@
       .github {
         display: block;
         position: absolute;
-        bottom: 0px;
+        top: 20px;
         right: 0;
       }
 
       .github {
-        right: 40px;
+        top: 60px;
       }
+      
       .caption {
         display: block;
         padding: 15px 0 25px 0;
